mostrando alert de la cantidad de class ejercicio 2

--- a/ejercicio-2/index.html
+++ b/ejercicio-2/index.html
@@ -17,7 +17,8 @@
       <script>
         //Escribe aqui tu codigo JavaScript
         var cantidadClass = document.getElementsByClassName("mensaje").length;
-        console.log(cantidadClass);
+        consoleL.log(cantidadClass);
+        alert("La cantidad de Clase es: "+ cantidadClass);
         function cantidadElementosClass(){
           if(cantidadClass<=1){
             alert("Es muy Poco");
